--- a/index.html
+++ b/index.html
@@ -4,27 +4,284 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>website</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="head">
-      <h1><span class="logo">E</span>-shop</h1>
-      <nav>
-        <ul class="link-container">
-          <li>Home</li>
-          <li>Products</li>
-          <li>Services</li>
-          <li>Contacts</li>
-        </ul>
-      </nav>
+    <div class="container">
+      <header class="head">
+        <h1 class="shop"><span class="logo">M</span>-shop</h1>
+        <nav>
+          <ul class="link-container">
+            <li>Home</li>
+            <li>Products</li>
+            <li>Services</li>
+            <li>Contacts</li>
+          </ul>
+        </nav>
 
-      <ul class="link-container">
-        <li>search</li>
-        <li>heart</li>
-        <li>cart</li>
-      </ul>
-    </header>
-    <main></main>
-    <footer></footer>
+        <ul class="link-container">
+          <li><span class="material-symbols-outlined"> search </span></li>
+          <li>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              fill="currentColor"
+              class="bi bi-heart-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
+              />
+            </svg>
+          </li>
+          <li>
+            <span class="material-symbols-outlined"> shopping_cart </span>
+          </li>
+        </ul>
+      </header>
+      <main>
+        <div class="pink">
+          <section class="home">
+            <h1 class="introduction">Get the best beaded bag and smartwatch</h1>
+            <div class="search">
+              <span class="material-symbols-outlined"> search </span>
+              <p>Search your favorite product</p>
+            </div>
+          </section>
+          <div class="image1">
+            <img
+              class="orange-watch"
+              src="./images/orange-watch.jpeg"
+              alt="smartwatch"
+            />
+          </div>
+          <div class="image2">
+            <div class="icons">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-instagram"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-facebook"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-twitter-x"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"
+                />
+              </svg>
+            </div>
+            <img class="beaded-bag" src="./images/bead.jpg" alt="beaded bag" />
+          </div>
+        </div>
+        <div class="options">
+          <ul class="choice">
+            <li>Smartwatches</li>
+            <li>Bracelets</li>
+            <li>Bags</li>
+            <li>Straps</li>
+            <li>Necklace</li>
+            <l> <span class="logo">See all</span></l>
+          </ul>
+
+          <ul class="arrows">
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-arrow-left"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+                />
+              </svg>
+            </li>
+            <li>
+              <span class="logo"><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-arrow-right"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+                />
+              </svg></span> 
+            </li>
+          </ul>
+        </div>
+        <div class="new">
+          <div class="new1">
+            <img class="new-image" src="./images/🌟 _HK8 Pro Smartwatch Series 8 Ultra With Ocean belt_.jpeg" alt="smartwatch">
+            <p>Series watch</p>
+            <p class="price">#750.80</p>
+            
+          </div>
+          <div class="new2">
+            <img class="new-image1" src="./images/pink owambe.jpeg" alt="smartwatch">
+            <p>Wedding bag</p>
+            <p class="price">#950.80</p>
+          </div>
+          <div class="new3">
+            <img class="new-image2" src="./images/Crystal Bag Bead Bag Crystal Bead Bag Women Handbags - Etsy.jpeg" alt="smartwatch">
+            <p>Crystal bag</p>
+            <p class="price">#600.80</p>
+          </div>
+        </div>
+        <div class="newtwo">
+          <div class="new1">
+            <img class="new-image" src="./images/Crystal Bag Mini Bag Beaded Mini Bag Mini Purse Beaded Bag - Etsy.jpeg" alt="smartwatch">
+            <p>Mini bag</p>
+            <p class="price">#750.80</p>
+            
+          </div>
+          <div class="new2">
+            <img class="new-image1" src="./images/Pulseira de contas com encanto de coração.jpeg" alt="smartwatch">
+            <p>Beaded bracelet</p>
+            <p class="price">#950.80</p>
+          </div>
+          <div class="new3">
+            <img class="new-image2" src="./images/chain-watch.jpeg" alt="smartwatch">
+            <p>Chain-watch</p>
+            <p class="price">#600.80</p>
+          </div>
+        </div>
+        <div class="see-all">
+          <div class="note">
+            <p class="intro">Latest stylish beaded bags</p>
+            <p class="collection">Men 2023 collection watch</p>
+            <div class="all">
+              <p class="button">See all</p>
+            </div>
+          </div>
+          <div class="sample">
+            <img class="Latest" src="./images/d22b00eba9b88a6e39b3088f89c022f6.jpg" alt="smartwatch">
+          </div>
+        </div>
+      </main>
+    </div>
+      <footer>
+        <div class="foot">
+          <div class="contacts">
+            <h1 class="shop"><span class="logo">M</span>-shop</h1>
+            <ul class="calls">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-instagram"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-facebook"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-twitter-x"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"
+                />
+              </svg>
+            </ul>
+            <p>Designed @Maverick</p>
+          </div>
+          <div class="links">
+            <ul>
+              <li class="span">Shop</li>
+              <li>About us</li>
+              <li>Contact</li>
+              <li>Location</li>
+              <li>FAQ</li>
+            </ul>
+            <ul>
+              <li class="span">Links</li>
+              <li>Electronics</li>
+              <li>Summer</li>
+              <li>Book</li>
+              <li>Smartwatches</li>
+            </ul>
+            <ul>
+              <li class="span">Contacts</li>
+              <li>+234 8845 2384</li>
+              <li>m-shop@gmail.com</li>
+              <li>123 Plain road, China.</li>
+              <li>123 Plain road, China.</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
